--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,9 @@
 ---
-# defaults file for ansible-role-nginx-modsec3-crs3
-
+# defaults file for coopdevs.nginx_modsec3_crs
+nginx_modsec3_enabled: True
+nginx_modsec3_crs_version: v3.4/dev
+nginx_modsec3_crs3_force_compile: False
+nginx_modsec3_crs3_block_mode: True
 nginx_modsec3_crs3_debian_pre_reqs:
   - libgeoip-dev
   - libcurl4-openssl-dev
@@ -33,3 +36,5 @@ nginx_modsec3_crs3_redhat_pre_reqs:
 
 nginx_modsec3_crs3_redhat_compiler_reqs:
   - "@Development tools"
+
+nginx_official_repo: True
