--- a/tasks/compile.yml
+++ b/tasks/compile.yml
@@ -2,6 +2,24 @@
 ---
 # Tasks for compiling Modsecurity3 and installing OWASP CRS v3
 
+- name: Set nginx_modules_location if not already set
+  set_fact:
+    nginx_modules_location: "{{ nginx_conf_dir }}/modules"
+  when: nginx_modules_location is not defined
+
+- name: Clear previous compilation
+  file:
+    path: "{{ item }}"
+    state: absent
+  with_items:
+    - "~/ModSecurity"
+    - "~/ModSecurity-nginx"
+    - "~/Nginx"
+    - "/tmp/nginx-*.tar.gz"
+    - "{{ nginx_modules_location }}/ngx_http_modsecurity_module.so"
+    - "{{ nginx_conf_dir }}/modsec/"
+  when: nginx_modsec3_crs3_force_compile
+
 - name: Obtain Modsecurity source code for branch v3/master
   git:
     repo: "https://github.com/SpiderLabs/ModSecurity"
@@ -23,7 +41,6 @@
     - "make"
     - "make install"
   when: not modsec3_present or nginx_modsec3_crs3_force_compile
-
 
 - name: Obtain Modsecurity-nginx source code
   git:
@@ -52,13 +69,6 @@
     remote_src: yes
   when: not modsec3_nginx_present or nginx_modsec3_crs3_force_compile
 
-
-- name: Get configure arguments
-  shell:  "nginx -V  2>&1 | awk -F ':' '/configure arguments/{print $2}'"
-  register: result
-  changed_when: False
-  when: not modsec3_nginx_present or nginx_modsec3_crs3_force_compile
-
 - name: Configure and make ModSecurity3 for Nginx module
   shell: "{{ item }}"
   args:
@@ -74,7 +84,6 @@
     file: "../jdauphant.nginx/vars/Debian.yml"
   when:
     - ansible_os_family == "Debian"
-    #- nginx_modules_location is not defined
     #- nginx_python_selinux_pkgs is not defined
 
 - name: import nginx role Redhat/Centos vars
@@ -82,7 +91,6 @@
     file: "../jdauphant.nginx/vars/Redhat.yml"
   when:
     - ansible_os_family == "Redhat"
-    #- nginx_modules_location is not defined
     #- nginx_python_selinux_pkgs is not defined
 
 - name: Copy Modsecurity-nginx module to Nginx modules folder
@@ -90,6 +98,12 @@
     src: "~/Nginx/nginx-{{ nginx_modsec3_crs3_nginx_version }}/objs/ngx_http_modsecurity_module.so"
     dest: "{{ nginx_modules_location }}"
     remote_src: yes
+  when: not modsec3_nginx_present or nginx_modsec3_crs3_force_compile
+
+- name: Enable module in Nginx
+  template:
+    src: 50-mod-http-modsecurity.conf.j2
+    dest:  "{{ nginx_conf_dir }}/modules-enabled/50-mod-http-modsecurity.conf"   
   when: not modsec3_nginx_present or nginx_modsec3_crs3_force_compile
 
 - name: Create folder for Modsec config and rules
@@ -132,6 +146,7 @@
     repo: "https://github.com/coreruleset/coreruleset"
     dest: "{{ nginx_conf_dir }}/modsec/owasp-modsecurity-crs"
     version: "{{ nginx_modsec3_crs_version }}"
+    depth: 1
   when: not crs3_present or nginx_modsec3_crs3_force_compile
 
 - name: Copy crs-setup.conf.example to become crs-setup.conf
