fix: clear previous compilations and enable plugin

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 # defaults file for coopdevs.nginx_modsec3_crs
 nginx_modsec3_enabled: True
 nginx_modsec3_crs_version: v3.4/dev
-nginx_modsec3_crs3_force_compile: False
+nginx_modsec3_crs3_force_compile: True
 nginx_modsec3_crs3_block_mode: True
 nginx_modsec3_crs3_debian_pre_reqs:
   - git
@@ -52,3 +52,4 @@ nginx_modsec3_crs3_maxmind_enabled: false
 
 nginx_modsec3_crs3_core_rule_set_version: "v4.0.0"
 nginx_official_repo: True
+nginx_official_repo_mainline: True
