fix: dynamically get nginx paths

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,21 +33,21 @@
     state: present
   when: ansible_os_family == "Redhat"
 
-- name: run Nginx selinux tasks
+- name: Run Nginx SElinux tasks
   include_role:
     name: jdauphant.nginx
     tasks_from: selinux.yml
     allow_duplicates: yes
   when: ansible_selinux and ansible_selinux.status == "enabled"
 
-- name: run Nginx nginx offical repo tasks
+- name: Run Nginx official repo tasks
   include_role:
     name: jdauphant.nginx
     tasks_from: nginx-official-repo.yml
     allow_duplicates: yes
   when: nginx_official_repo == True
 
-- name: run Nginx install packages tasks
+- name: Run Nginx install packages tasks
   include_role:
     name: jdauphant.nginx
     tasks_from: installation.packages.yml
@@ -62,9 +62,15 @@
   set_fact:
     nginx_modsec3_crs3_nginx_version: "{{ ansible_facts.packages.nginx[0].version.split('-')[0] }}"
 
-- name: Set nginx_conf_dir if not already set
+- name: Get Nginx conf location
+  shell: dirname $(nginx -V 2>&1 | grep "configure arguments:" | sed -e 's/.*--conf-path=\([^ ]*\).*/\1/')
+  register: _nginx_conf_location
+  changed_when: false
+  when: nginx_conf_dir is not defined
+
+- name: Set variable nginx_conf_dir
   set_fact:
-    nginx_conf_dir: "/etc/nginx"
+    nginx_conf_dir: "{{ _nginx_conf_location.stdout }}"
   when: nginx_conf_dir is not defined
 
 - name: Check if ModSecurity3 is present
@@ -111,4 +117,3 @@
     name: "{{ installed.stdout_lines }}"
     state: absent
   when: installed is defined and (nginx_modsec3_crs3_keep is undefined or not nginx_modsec3_crs3_keep)
-  
