--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for jdauphant.nginx-modsec3-crs3
+# tasks file for nginxinc.nginx-modsec3-crs3
 
 - name: Installing Pre-Reqs for Debian/Ubuntu
   apt:
@@ -35,23 +35,23 @@
 
 - name: Run Nginx SElinux tasks
   include_role:
-    name: jdauphant.nginx
+    name: nginxinc.nginx
     tasks_from: selinux.yml
     allow_duplicates: yes
   when: ansible_selinux and ansible_selinux.status == "enabled"
 
 - name: Run Nginx official repo tasks
   include_role:
-    name: jdauphant.nginx
-    tasks_from: nginx-official-repo.yml
+    name: nginxinc.nginx
+#    tasks_from: nginx-official-repo.yml
     allow_duplicates: yes
   when: nginx_official_repo == True
 
-- name: Run Nginx install packages tasks
-  include_role:
-    name: jdauphant.nginx
-    tasks_from: installation.packages.yml
-    allow_duplicates: yes
+#- name: Run Nginx install packages tasks
+#  include_role:
+#    name: nginxinc.nginx
+#    tasks_from: installation.packages.yml
+#    allow_duplicates: yes
 #  when: nginx_installation_type == "packages"
 
 - name: Get the rpm or apt package facts
@@ -97,7 +97,7 @@
 
 - name: Configure Nginx now that the Modsec module is built
   import_role:
-    name: jdauphant.nginx
+    name: nginxinc.nginx
 
 - name: Check which packages were installed for Debian/Ubuntu
   shell: dpkg-query -l > /tmp/after.txt
