--- a/tasks/compile.yml
+++ b/tasks/compile.yml
@@ -85,13 +85,6 @@
     - "make modules"
   when: not modsec3_nginx_present or nginx_modsec3_crs3_force_compile
 
-- name: import nginx role Debian/Ubuntu vars
-  include_vars:
-    file: "../nginxinc.nginx/vars/Debian.yml"
-  when:
-    - ansible_os_family == "Debian"
-    #- nginx_python_selinux_pkgs is not defined
-
 - name: import nginx role Redhat/Centos vars
   include_vars:
     file: "../nginxinc.nginx/vars/Redhat.yml"
@@ -104,6 +97,13 @@
     src: "~/Nginx/nginx-{{ nginx_modsec3_crs3_nginx_version }}/objs/ngx_http_modsecurity_module.so"
     dest: "{{ nginx_modules_location }}/ngx_http_modsecurity_module.so"
     remote_src: yes
+  when: not modsec3_nginx_present or nginx_modsec3_crs3_force_compile
+
+- name: Create folder for modules-enabled config and rules
+  file:
+    #path: /etc/nginx/modules-enabled
+    path: "{{ nginx_conf_dir }}/modules-enabled"
+    state: directory
   when: not modsec3_nginx_present or nginx_modsec3_crs3_force_compile
 
 - name: Enable module in Nginx
