--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,23 @@ nginx_modsec3_crs3_debian_pre_reqs:
   - ssdeep
   - libfuzzy-dev
   - git
+  - m4
+  - git
+  - g++
+  - apt-utils
+  - autoconf
+  - automake
+  - build-essential
+  - libcurl4-openssl-dev
+  - libgeoip-dev
+  - liblmdb-dev
+  - libpcre++-dev
+  - libtool
+  - libxml2-dev
+  - libyajl-dev
+  - pkgconf
+  - wget
+  - zlib1g-dev
 
 nginx_modsec3_crs3_debian_compiler_reqs:
   - build-essential
