--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -52,3 +52,6 @@ nginx_modsec3_crs3_redhat_compiler_reqs:
 
 nginx_official_repo: True
 nginx_official_repo_mainline: True
+
+nginx_config_modules:
+  - modules/ngx_http_modsecurity_module.so
