debug: comment out old code

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,12 +33,12 @@
     state: present
   when: ansible_os_family == "Redhat"
 
-- name: Run Nginx SElinux tasks
-  include_role:
-    name: jdauphant.nginx
-    tasks_from: selinux.yml
-    allow_duplicates: yes
-  when: ansible_selinux and ansible_selinux.status == "enabled"
+# - name: Run Nginx SElinux tasks
+#   include_role:
+#     name: nginxinc.nginx
+#     tasks_from: selinux.yml
+#     allow_duplicates: yes
+#   when: ansible_selinux and ansible_selinux.status == "enabled"
 
 - name: Run Nginx official repo tasks
   include_role:
@@ -47,11 +47,11 @@
     allow_duplicates: yes
   when: nginx_official_repo == True
 
-- name: Run Nginx install packages tasks
-  include_role:
-    name: jdauphant.nginx
-    tasks_from: installation.packages.yml
-    allow_duplicates: yes
+# - name: Run Nginx install packages tasks
+#   include_role:
+#     name: jdauphant.nginx
+#     tasks_from: installation.packages.yml
+#     allow_duplicates: yes
 #  when: nginx_installation_type == "packages"
 
 - name: Get the rpm or apt package facts
