--- a/tasks/compile.yml
+++ b/tasks/compile.yml
@@ -85,19 +85,19 @@
     - "make modules"
   when: not modsec3_nginx_present or nginx_modsec3_crs3_force_compile
 
-- name: import nginx role Debian/Ubuntu vars
-  include_vars:
-    file: "../jdauphant.nginx/vars/Debian.yml"
-  when:
-    - ansible_os_family == "Debian"
-    #- nginx_python_selinux_pkgs is not defined
+# - name: import nginx role Debian/Ubuntu vars
+#   include_vars:
+#     file: "../jdauphant.nginx/vars/Debian.yml"
+#   when:
+#     - ansible_os_family == "Debian"
+#     #- nginx_python_selinux_pkgs is not defined
 
-- name: import nginx role Redhat/Centos vars
-  include_vars:
-    file: "../jdauphant.nginx/vars/Redhat.yml"
-  when:
-    - ansible_os_family == "Redhat"
-    #- nginx_python_selinux_pkgs is not defined
+# - name: import nginx role Redhat/Centos vars
+#   include_vars:
+#     file: "../jdauphant.nginx/vars/Redhat.yml"
+#   when:
+#     - ansible_os_family == "Redhat"
+#     #- nginx_python_selinux_pkgs is not defined
 
 - name: Copy Modsecurity-nginx module to Nginx modules folder
   copy:
@@ -106,11 +106,11 @@
     remote_src: yes
   when: not modsec3_nginx_present or nginx_modsec3_crs3_force_compile
 
-- name: Enable module in Nginx
-  template:
-    src: 50-mod-http-modsecurity.conf.j2
-    dest:  "{{ nginx_conf_dir }}/modules-enabled/50-mod-http-modsecurity.conf"   
-  when: not modsec3_nginx_present or nginx_modsec3_crs3_force_compile
+# - name: Enable module in Nginx
+#   template:
+#     src: 50-mod-http-modsecurity.conf.j2
+#     dest:  "{{ nginx_conf_dir }}/conf.d/50-mod-http-modsecurity.conf"   
+#   when: not modsec3_nginx_present or nginx_modsec3_crs3_force_compile
 
 - name: Create folder for Modsec config and rules
   file:
